<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:layout_marginTop="8dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/foto_pemain"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:civ_circle_background_color="@android:color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/foto_pemain"
        android:layout_toEndOf="@+id/foto_pemain"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nama_pemain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/nama_pemain"/>

        <TextView
            android:id="@+id/detail_pemain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/rincian"
            android:textColor="@color/colorDetailPlayer"/>

        <Button
            android:id="@+id/btn_detail"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:background="@drawable/btn_general"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:text="@string/detail"
            android:textStyle="bold"/>

    </LinearLayout>

</RelativeLayout>